--- a/src/main/resources/assets/fresh-loot-highlight/lang/en_us.json
+++ b/src/main/resources/assets/fresh-loot-highlight/lang/en_us.json
@@ -4,19 +4,19 @@
     "fresh-loot-highlight.config.enable_pickup_warning": "Toggle pickup warnings",
     "fresh-loot-highlight.config.enable_pickup_warning_desc": "Show a warning when an item is picked up.",
 
-    "fresh-loot-highlight.config.enable_pickup_warning_grouping": "Toggle grouping of pickup warnings",
+    "fresh-loot-highlight.config.enable_pickup_warning_grouping": "Duration thresholt for grouping of pickup warnings",
     "fresh-loot-highlight.config.enable_pickup_warning_grouping_desc": "Group multiple pickup warnings together within a set time window.",
 
-    "fresh-loot-highlight.config.pickup_warning_timeout": "Select the duration before a warning disappears",
+    "fresh-loot-highlight.config.pickup_warning_timeout": "Duration before warnings disappear",
     "fresh-loot-highlight.config.pickup_warning_timeout_desc": "Duration before a pickup warning disappears.",
 
-    "fresh-loot-highlight.config.pickup_warning_hud_style": "Select the display style of the pickup warnings",
+    "fresh-loot-highlight.config.pickup_warning_hud_style": "Display style of the pickup warnings",
     "fresh-loot-highlight.config.pickup_warning_hud_style_desc": "Select the display style for the pickup warning HUD.",
 
-    "fresh-loot-highlight.config.pickup_warning_hud_position": "Select the position of the pickup warnings on the HUD",
+    "fresh-loot-highlight.config.pickup_warning_hud_position": "Position of the pickup warnings on the HUD",
     "fresh-loot-highlight.config.pickup_warning_hud_position_desc": "Position of the pickup warning on the HUD.",
 
-    "fresh-loot-highlight.config.pickup_warning_hud_show_item": "Show item representation",
+    "fresh-loot-highlight.config.pickup_warning_hud_show_item": "Show item's representation",
     "fresh-loot-highlight.config.pickup_warning_hud_show_item_desc": "Show the picked item in the pickup warning HUD.",
 
     "fresh-loot-highlight.config.enable_slot_highlighter": "Toggle the highlight of newly acquired items in the inventory",
@@ -31,17 +31,14 @@
     "fresh-loot-highlight.config.enabled":"Enabled",
     "fresh-loot-highlight.config.disabled":"Disabled",
 
-    "10s": "10s",
-    "5s": "5s",
-    "3s": "3s",
-    "Never": "Never",
+    "0.0": "Never",
 
-    "Default": "Default",
-    "Long": "Long",
-
+    "DEFAULT": "Default",
+    "LONG": "Long",
     "TOP_LEFT": "Top left",
     "TOP_RIGHT": "Top right",
     "BOTTOM_RIGHT": "Bottom right",
-
-    "Only if never seen before": "Only if never seen before"
+    "ONLY_IF_NEVER_SEEN_BEFORE": "Only if never seen before",
+    "ALWAYS": "Always",
+    "NEVER": "Never"
 }
